# PRINTERFRIGO

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: bump-version.yml  release.yml
scripts/: auto-capture.test.mjs
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: admin_ai.rs  config.rs  hardware.rs  lib.rs  main.rs  printing.rs  queue.rs  system.rs
