[package]
name = "printerfrigo"
version = "0.2.0"
description = "Agente desktop KyberFrigo para balancas e impressoras"
authors = ["KyberFrigo"]
edition = "2021"

[lib]
name = "printerfrigo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
serialport = "4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4", "serde"] }
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
